fixed overflow on nowrap

--- a/sass/grid.sass
+++ b/sass/grid.sass
@@ -12,7 +12,7 @@
   flex-wrap: $wrap
   align-content: flex-start
   justify-content: flex-start
-  overflow: if($isFixed or $wrap == wrap, auto, null)
+  overflow: if($isFixed or $wrap == nowrap, auto, null)
   > *:nth-child(n)
     flex: 0 0 if($indent > 0, calc((#{100%} - #{(ceil($layoutX) - 1)*$indent}) / #{$layoutX}), calc(#{100%/$layoutX}))
     @if $isFixed
